# myhub

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  manifest.json
.boot/: install.command  launcher.sh  on-mount.command  on-mount.sh  plist.template  preflight.sh  uninstall.command
.boot/assets/: .gitkeep
.claude/: settings.json
.claude/agents/: briefer.md  compiler.md
.claude/commands/: brief.md  compile.md  reflect.md  setup.md
.claude/hooks/: block-api-imports.sh  session-end.sh  session-start.sh
.claude/output-styles/: terse.md
.claude/rules/: arasul-app.md  content-wiki.md  docs-and-plans.md  myhub-tui.md  tooling.md
.claude/skills/: .gitkeep
.github/workflows/: ci.yml  release-arasul.yml  release.yml
arasul-app/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
arasul-app/.ladle/: config.mjs
arasul-app/src/: App.css  App.tsx  main.tsx  theme.css
arasul-app/src-tauri/: Cargo.toml  tauri.conf.json
arasul-app/src-tauri/src/: auto_launch.rs  claude.rs  drive_watcher.rs  fs.rs  github.rs  import.rs  lib.rs  main.rs  myhub.rs  platform.rs  projects.rs  pty.rs  safe_command.rs  search.rs  system.rs  updates.rs  vault.rs  workbook.rs  workflow.rs  workflow_db.rs
arasul-app/src-tauri/src/ipc/: error.rs  mod.rs
arasul-app/src-tauri/src/providers/: claude_code.rs  codex.rs  commands.rs  cursor.rs  gemini.rs  install.rs  mod.rs  ollama.rs
content/: CLAUDE.md  ssd.code-workspace
content/communication/: CLAUDE.md
content/notes/: CLAUDE.md
content/projects/: CLAUDE.md
content/wiki/: CLAUDE.md
docs/: arasul-api-spec.md  arasul-design-spec.md  arasul-execution.md  arasul-plan.md  authoring.md  beta-program.md  brand-migration-plan.md  brand-tm-check.md  design-moodboard.md  launch-checklist.md  release-process.md  sku-a-logistics.md  ultimate-polish-plan-v2.md  vault-decision.md  vision-v3-ai-workspace.md  voice.md
docs/archive/: ultimate-polish-plan.md  ux-overhaul-plan.md  v4-gui-plan.md
docs/design/: dashboard-mockup.html  tokens.md
docs/plans/: 2026-04-26-master-plan.md  (+1 more)
docs/vision/: 01-mission.md  (+2 more)
landing/: index.html  privacy.html  signup.html  style.css  support.html
memory/: MEMORY.md
myhub-cli/: Makefile  go.mod
myhub-tui/: Makefile  README.md  go.mod  go.sum  pyproject.toml
myhub-tui/cmd/myhub/: main.go
myhub-tui/cmd/myhub-tui/: main.go
myhub-tui/internal/briefer/: briefer.go  briefer_test.go  tts.go
myhub-tui/internal/config/: config.go  config_test.go
myhub-tui/internal/interview/: interview.go  interview_test.go
myhub-tui/internal/launch/: claude.go  claude_test.go
myhub-tui/internal/myhubcli/: cli.go  cli_test.go  compile.go  manifest.go  trust.go
myhub-tui/internal/projects/: git.go  projects_test.go
myhub-tui/internal/theme/: theme.go  theme_test.go
myhub-tui/internal/ui/: dashboard.go  dashboard_test.go  onboarding.go  onboarding_test.go
myhub-tui/internal/watcher/: watcher.go  watcher_test.go
myhub-tui/internal/wikistate/: wikistate.go  wikistate_test.go
myhub-tui/myhub_tui/: __init__.py  app.py
myhub-tui/myhub_tui/commands/: ai.py  brief.py  compile.py  git.py  lazygit.py  meta.py  project.py  stats.py  verify.py
myhub-tui/myhub_tui/core/: bin_resolve.py  completer.py  config.py  onboarding.py  projects.py  registry.py  router.py  session_state.py  state.py  theme.py  types.py
myhub-tui/myhub_tui/core/ui/: dashboard.py  output.py  panels.py
myhub-tui/tests/: conftest.py  test_config.py  test_git_commands.py  test_onboarding.py  test_project_commands.py  test_projects.py  test_registry.py  test_state.py  test_subprocess_commands.py
tooling/: README.md  activate-rust.sh  build-appimage.sh  check-bundle-size.mjs  check-css-tokens.mjs  factory-image-batch.sh  image-ssd.sh  install-go.sh  install-python.sh  install-rust.sh  install-uv.sh
(+109 files in other folders)
